## [1.1.0] - 2017-01-08
### Added
- Caching
- Stream info

## [1.0.0] - 2017-01-07
### Added
- Ability to watch featured AMV