@@ -2,6 +2,8 @@
 ### Added
 - Caching
 - Stream info
+### Fixed
+- Marking as watched works properly
 
 ## [1.0.0] - 2017-01-07
 ### Added
